@@ -1,5 +1,11 @@
 20020930
- - (djm) Tidy contrib/, add Makefile for GNOME passphrase dialogs, tweak README
+ - (djm) Tidy contrib/, add Makefile for GNOME passphrase dialogs, 
+   tweak README
+ - (djm) OpenBSD CVS Sync
+   - mickey@cvs.openbsd.org 2002/09/27 10:42:09
+     [compat.c compat.h sshd.c]
+     add a generic match for a prober, such as sie big brother; 
+     idea from stevesk@; markus@ ok
 
 20020927
  - (djm) OpenBSD CVS Sync
@@ -737,4 +743,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2486 2002/09/30 00:40:39 djm Exp $
+$Id: ChangeLog,v 1.2487 2002/09/30 01:59:21 djm Exp $
